--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,16 @@ click==6.7
 Flask==0.12
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.2
+fpdf==1.7.2
 itsdangerous==0.24
 Jinja2==2.9.5
 MarkupSafe==0.23
 packaging==16.8
 pyparsing==2.1.10
+pyusb==1.0.0
 six==1.10.0
 SQLAlchemy==1.1.5
+texttable==1.2.1
 Werkzeug==0.11.15
 WTForms==2.1
 xlrd==1.0.0
-pyusb==1.0.0
